newweb/nmrbox/src/custom-theme.scss
/* ... */
.standard-card {
  width: calc(100% - 30px);
  height: calc(100% - 30px);
}

.section-banner-bg {
  position: absolute;
  top: 50px;
  left: 0px;
  right: 0px;
  width: 100%;
  height: 125px;
  z-index: 0;
}

/*
.section-banner-team-tab {
  background-image: url('./assets/section-banners/original-team-tab-banner.png');
}*/

.section-submenu {
  position: relative;
  display: block;
  height: 60px;
  width: 100%;
}

.section-detail p {
  padding-right: 33%;
}

/* Swiper */
.swiper-container {
  z-index: 2;
}

.swiper-pagination-blue {
  .swiper-pagination-bullet, .swiper-pagination-bullet-active {
    background: $nmrbox-blue-dark;
  }
}

/* Filtering UI */
#st-select .mat-select-arrow {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -o-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

#rp-select, #st-select, #sw-select, #all-software {
  font-size: 14px;
  text-transform: uppercase;
}

a#all-software {
  color: rgba(0, 0, 0, 0.38);
}

#st-select, #sw-select {
  margin-left: 25px;
}

.sw-filters-container {
  position: relative;
  display: block;
  width: 100%;

  .sw-filters {
    width: 95%;
    max-width: 910px;
    margin: 0px auto;

    > a {
      padding: 5px 0px;
      font-size: 12px;
      text-transform: uppercase;
    }
    > a:hover {
      cursor: pointer;
    }

    mat-select {
      margin-top: 5px;
    }

    #software-type {
      margin-left: 150px;
    }
  }

  .sw-menu-wrapper {
    position: relative;
    width: 100%;
    display: block;
    background-color: #f7f7f7;
    margin-top: 0px;
  }

  swiper {
    width: 900px;
    height: 70px;
    background-color: transparent;
    opacity: 50;
    margin: 0px auto;

    .swiper-wrapper {
      .swiper-slide {
        width: 120px;
        height: 40px;
        margin-top: 15px;
      }
      a {
        position: relative;
        display: inline-block;
        width: 120px;
        height: 40px;
        background-size: 240px 40px;
        background-position: -115px 0px;
        overflow: hidden;
      }
      a:hover, .selected a {
        background-position: 2px 0px;
        cursor: pointer;
      }
    }
  }
}

.sw-filters-search-only {
  margin-left: 3px;
  margin-top: 8px;
}

/* TABS - main container (Community & Team) */
.tab-group-container {
  /*width: 920px;*/
  width: 100%;
  margin: 0px auto;

  .grid-outer-wrapper {
    width: 100%;
    padding: 10px 0px;
  }

  .grid-content-wrapper {
    width: 910px;
    margin: 0px auto;

    h2, h3 {
      padding-bottom: 0px;
      margin-bottom: 0px;
      margin-left: 15px;
      line-height: 1em;
      font-weight: 200;
    }

    p {
      color: #313131;
    }
  }
  mat-grid-list.workflow-list {
    margin-left: -15px;
  }
}

.section-submenu {
  position: absolute;
  width: 100%;
  height: 48px;
}

footer {
  background-color: $nmrbox-blue-dark;
  width: 100%;
  overflow: hidden;

  .footer-wrapper {
    width: 910px;
    margin: 0px auto;
    padding: 10px 10px 30px 10px;
    color: #ffffff !important;
    height: 90px;

    p {
      color: #ffffff;
      opacity: 0.9;
    }
  }
  mat-grid-tile {
    display: inline-table;
    padding: 0px 10px;
    height: 90px;

    a {
      color: #ffffff;
    }
  }
  mat-grid-tile#footer-logo {
    border-right: 1px solid $nmrbox-gray-light;
    opacity: 0.7;

    span {
      width: 100px;
      margin-top: 5px;
      background-size: 288px 48px;
    }
  }
  mat-grid-tile#footer-text p {
    position: relative;
    top: -14px;
    font-size: 13px;
    font-weight: 200;
    opacity: 0.9;
  }
}

/* Page styles */
.page-wrapper {

  .page-details {
    margin-top: 20px;
  }

  .page-details > h1, section, .menu-wrapper {
    width: 100%;
    max-width: 900px;
    margin: 0px auto;
  }
  .menu-wrapper {
    min-height: 50px;
    margin-bottom: 10px;

    .page-title {
      margin-top: 40px;
      padding: 12px 10px 10px 0px;
      font-size: 24px;
      font-variant: inherit;
      font-weight: 300;
      margin-left: 0;
    }
  }

  h3 {
    font-weight: 500;
  }

}

.container {
  @media (min-width: 768px) {
    &.nmrbox-custom-container {
      width: 600px;
    }
  }

  @media (min-width: 992px) {
    &.nmrbox-custom-container {
      width: 720px;
    }
  }

  @media (min-width: 1200px) {
    &.nmrbox-custom-container {
      width: 910px;
    }
  }

}

.tab-group-container {
  .grid-content-wrapper {
    line-height: 1.2em;
    h2, h3 {
      margin-left: 0 !important;
    }
  }
}

a:focus, a:active {
  outline: none;
}

/* These might not be appropriate as they harm accessibility
 See: https://github.com/angular/material2/issues/5903

They make the active tab seem lit up by default.

.mat-tab-label-active{
  background-color: rgba(0,0,0,0) !important;
  opacity: 1 !important;
}

.mat-tab-link:not(.mat-tab-label-active):focus {
  background: none !important;
}
*/

/* Don't make the page move when the scroll bar appears. */
html {
  overflow-y: scroll;
}

